update-animal-account-html

--- a/friends.html
+++ b/friends.html
@@ -298,7 +298,7 @@
       <!-- <옆집 차돌이> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_지민누나.html">
+          <a class="prof__link" href="account_옆집차돌이.html">
             <div class="profile__img-box">
               <img class="profile-img" src="https://media.istockphoto.com/vectors/cute-shih-tzu-dog-sitting-and-smiling-cartoon-icon-vector-vector-id1272489352" />
             </div>  
@@ -319,7 +319,7 @@
       <!-- <고약이> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_경훈형아.html">
+          <a class="prof__link" href="account_고약이.html">
             <div class="profile__img-box">
               <img class="profile-img" src="https://image.utoimage.com/preview/cp861283/2018/12/201812006440_500.jpg" />
             </div>
@@ -341,7 +341,7 @@
       <!-- <갈맹이> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_용현형아.html">
+          <a class="prof__link" href="account_갈맹이.html">
             <div class="profile__img-box">
               <img class="profile-img" src="https://cdn.discordapp.com/attachments/862644219955904515/866678823714029578/seagull.png" />
             </div>
