--- a/chats.html
+++ b/chats.html
@@ -39,8 +39,9 @@
       <a href="chat_지원누나.html">
         <div class="user-component">
         <div class="user-component__column">
-          <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png" 
-          class="user-component__avatar user-component__avatar" />
+          <div class="user-img_box">
+          <img class="user-img_box_fir" src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png" 
+          class="user-component__avatar user-component__avatar" /></div>
           <div class="user-component__text">
             <h4 class="user-component__title">지원 누나</h4>
             <h6 class="user-component__subtitle">기분 좋으면 빵야 한번 만 해줘 ㅎㅎ</h6>
@@ -56,8 +57,9 @@
       <a href="chat_멍멍이.html">
         <div class="user-component">
         <div class="user-component__column">
-          <img src="https://media.istockphoto.com/vectors/cute-shih-tzu-dog-sitting-and-smiling-cartoon-icon-vector-vector-id1272489352" 
-          class="user-component__avatar user-component__avatar" />
+          <div class="user-img_box">
+          <img class="user-img_box_sec" src="https://media.istockphoto.com/vectors/cute-shih-tzu-dog-sitting-and-smiling-cartoon-icon-vector-vector-id1272489352" 
+          class="user-component__avatar user-component__avatar" /></div>
           <div class="user-component__text">
             <h4 class="user-component__title">옆집 차돌이</h4>
             <h6 class="user-component__subtitle">담에 누나한테 사달라고 졸라야지 왈왈!
@@ -74,8 +76,9 @@
       <a href="chat_고약이.html">
         <div class="user-component">
         <div class="user-component__column">
-          <img src="https://image.utoimage.com/preview/cp861283/2018/12/201812006440_500.jpg" 
-          class="user-component__avatar user-component__avatar" />
+          <div class="user-img_box">
+          <img class="user-img_box_thi" src="https://image.utoimage.com/preview/cp861283/2018/12/201812006440_500.jpg" 
+          class="user-component__avatar user-component__avatar" /></div>
           <div class="user-component__text">
             <h4 class="user-component__title">고약이</h4>
             <h6 class="user-component__subtitle">고약한 고양이... 힝ㅠ</h6>
@@ -91,8 +94,9 @@
       <a href="chat_백설기.html">
         <div class="user-component">
         <div class="user-component__column">
-          <img class="img_back" src="https://cdn.discordapp.com/attachments/862644219955904515/866632449839595530/b9bcf1090470fc2c.png" 
-          class="user-component__avatar user-component__avatar" />
+          <div class="user-img_box">
+          <img  class="user-img_box_for" src="https://cdn.discordapp.com/attachments/862644219955904515/866632449839595530/b9bcf1090470fc2c.png" 
+          class="user-component__avatar user-component__avatar" /></div>
           <div class="user-component__text">
             <h4 class="user-component__title">백설기</h4>
             <h6 class="user-component__subtitle">이 새벽에 깨오있던 건 나밖에 읎었다고...</h6>
